# sports-analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  demo_working.py  pyproject.toml
docs/: GETTING_STARTED.md
examples/: README.md  formation_analysis.py  player_tracking.py  tactical_analysis.py  team_classification.py
scripts/: analyze_filtered.py
scripts/archived/: demo.py  demo_uv.py  event_detection.py  pass_analysis.py  performance_metrics_fixed.py  realistic_calibration.py  tracking_improved.py
scripts/utilities/: benchmark.py
src/: main.py
src/application/dto/: match_dto.py
src/infrastructure/: visualization.py
src/infrastructure/ml/: tracker.py
src/infrastructure/monitoring/: __init__.py  benchmarks.py
src/infrastructure/video/: video_reader.py
src/interfaces/api/: __init__.py  app.py
tests/: conftest.py
